# bot-detector

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust-release.yml  rust.yml  test.yml
src/: main.rs  queue.rs
