[package]
name = "bot-detector"
version = "0.1.1"
authors = ["mo_blaa <moblaa@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc-rust = "0.1.5"
log = "0.4"
url = "2.1.1"
env_logger = "0.7.1"
tungstenite = "0.10.1"
dotenv = "0.15.0"
chrono = "0.4.11"
